--- a/publications/matt_conway.bib
+++ b/publications/matt_conway.bib
@@ -1,5 +1,13 @@
+@misc{Conway201204,
+abstract = {Measures of urban mobility and accessibility are useful in many situations, from real estate to urban planning. Some methods of measuring and visualizing mobility and accessibility include making travel-time isochrones, measuring travel time effects of network changes, measuring accessibility using opportunity data, and creating time-space prisms. Transit, walking and cycling are more important to mobility than driving in many urban areas. This poster examines how the open-source OpenTripPlanner Analyst software can be used in conjunction with open transit agency and street network data to create visualizations of multimodal mobility, accessibility and changes in travel time.},
+author = {Conway, Matthew Wigginton},
+publisher = {Poster presented at the annual meeting of the California Geographical Society, Davis, California, April 27–29},
+title = {{Measuring Urban Mobility and Accessibility Using OpenTripPlanner Analyst}},
+url = {http://www.indicatrix.org/cgs2012/},
+year = {2012}
+}
 @misc{Conway2013,
-abstract = {This article argues that some of the university class can be productively moved online, while some cannot. In particular, it argues that lectures work very well online, but expresses concern that other parts of the university experience are lost. It argues that unstructured time between students and professors is critical to creating a community of scholars, but that this can easily be lost in the online environment. It also gives suggestions about how to structure and present online lecture material.},
+abstract = {This article argues that some of the university class can be productively moved online, while some cannot. In particular, it argues that lectures work very well online, but expresses concern that other parts of the university experience do not. It argues that unstructured time between students and professors is critical to creating a community of scholars, but that this can easily be lost in the online environment. It also gives suggestions about how to structure and present online lecture material.},
 address = {Santa Barbara, CA},
 author = {Conway, Matthew Wigginton},
 booktitle = {Daily Nexus},
@@ -8,12 +16,4 @@ pages = {8},
 title = {{Cyberspace Classrooms and E-Professors: One Laptop Learner Considers the Merits and Downfalls of Online Classes}},
 url = {http://www.indicatrix.org/publications/2013/Conway-Online-Classes-DailyNexus.pdf},
 year = {2013}
-}
-@misc{Conway201204,
-abstract = {Measures of urban mobility and accessibility are useful in many situations, from real estate to urban planning. Some methods of measuring and visualizing mobility and accessibility include making travel-time isochrones, measuring travel time effects of network changes, measuring accessibility using opportunity data, and creating time-space prisms. Transit, walking and cycling are more important to mobility than driving in many urban areas. This poster examines how the open-source OpenTripPlanner Analyst software can be used in conjunction with open transit agency and street network data to create visualizations of multimodal mobility, accessibility and changes in travel time.},
-author = {Conway, Matthew Wigginton},
-publisher = {Poster presented at the annual meeting of the California Geographical Society, Davis, California, April 27–29},
-title = {{Measuring Urban Mobility and Accessibility Using OpenTripPlanner Analyst}},
-url = {http://www.indicatrix.org/cgs2012/},
-year = {2012}
 }
