Add CGS 2013 presentation.

--- a/publications/matt_conway.bib
+++ b/publications/matt_conway.bib
@@ -17,3 +17,11 @@ title = {{Cyberspace Classrooms and E-Professors: One Laptop Learner Considers t
 url = {http://www.indicatrix.org/publications/2013/Conway-Online-Classes-DailyNexus.pdf},
 year = {2013}
 }
+@misc{Conway2013a,
+abstract = {Jane Jacobs, the noted author of \_The Death and Life of Great American Cities\_, advanced many ideas that can be seen as iconoclastic. However, these ideas are in many cases very similar to the ideas of another important vein of scholarship, the the global cities hypothesis, which examines the role of cities in globalization. Jacobs's ideas and the ideas of the global cities scholars are largely constructed independently. This article examines the connections between the two. It works systematically, starting with small-scale phenomena and progressing to comments on global-scale phenomena.},
+author = {Conway, Matthew Wigginton},
+publisher = {Paper presented at the annual meeting of the California Geographical Society, San Luis Obispo, California, April 27–29},
+title = {{The Death and Life of Great Global Cities: Jane Jacobs and Global Cities Theory}},
+url = {http://www.indicatrix.org/publications/2013/Conway-Jacobs-slides.pdf},
+year = {2013}
+}
