Add greenlight stuff, css changes, license changes, &c. Welcome 2014!

--- a/publications/matt_conway.bib
+++ b/publications/matt_conway.bib
@@ -1,11 +1,3 @@
-@misc{Conway201204,
-abstract = {Measures of urban mobility and accessibility are useful in many situations, from real estate to urban planning. Some methods of measuring and visualizing mobility and accessibility include making travel-time isochrones, measuring travel time effects of network changes, measuring accessibility using opportunity data, and creating time-space prisms. Transit, walking and cycling are more important to mobility than driving in many urban areas. This poster examines how the open-source OpenTripPlanner Analyst software can be used in conjunction with open transit agency and street network data to create visualizations of multimodal mobility, accessibility and changes in travel time.},
-author = {Conway, Matthew Wigginton},
-publisher = {Poster presented at the annual meeting of the California Geographical Society, Davis, California, April 27–29},
-title = {{Measuring Urban Mobility and Accessibility Using OpenTripPlanner Analyst}},
-url = {http://www.indicatrix.org/cgs2012/},
-year = {2012}
-}
 @misc{Conway2013,
 abstract = {This article argues that some of the university class can be productively moved online, while some cannot. In particular, it argues that lectures work very well online, but expresses concern that other parts of the university experience do not. It argues that unstructured time between students and professors is critical to creating a community of scholars, but that this can easily be lost in the online environment. It also gives suggestions about how to structure and present online lecture material.},
 address = {Santa Barbara, CA},
@@ -18,10 +10,34 @@ url = {http://www.indicatrix.org/publications/2013/Conway-Online-Classes-DailyNe
 year = {2013}
 }
 @misc{Conway2013a,
-abstract = {Jane Jacobs, the noted author of \_The Death and Life of Great American Cities\_, advanced many ideas that can be seen as iconoclastic. However, these ideas are in many cases very similar to the ideas of another important vein of scholarship, the the global cities hypothesis, which examines the role of cities in globalization. Jacobs's ideas and the ideas of the global cities scholars are largely constructed independently. This article examines the connections between the two. It works systematically, starting with small-scale phenomena and progressing to comments on global-scale phenomena.},
+abstract = {Jane Jacobs, the noted author of _The Death and Life of Great American Cities_, advanced many ideas that can be seen as iconoclastic. However, these ideas are in many cases very similar to the ideas of another important vein of scholarship, the the global cities hypothesis, which examines the role of cities in globalization. Jacobs's ideas and the ideas of the global cities scholars are largely constructed independently. This article examines the connections between the two. It works systematically, starting with small-scale phenomena and progressing to comments on global-scale phenomena.},
 author = {Conway, Matthew Wigginton},
 publisher = {Paper presented at the annual meeting of the California Geographical Society, San Luis Obispo, California, April 27–29},
 title = {{The Death and Life of Great Global Cities: Jane Jacobs and Global Cities Theory}},
 url = {http://www.indicatrix.org/publications/2013/Conway-Jacobs-slides.pdf},
 year = {2013}
+}
+@misc{Conway2007,
+abstract = {This film is about construction and demolition waste management. It won second place in the 2007 Greenlight Earth Day Film Festival.},
+author = {Conway, Matthew Wigginton},
+publisher = {Film presented at the Greenlight Earth Day Film Festival, Palo Alto, CA},
+title = {{Another Fine Mess}},
+url = {http://www.indicatrix.org/greenlight#anotherfinemess},
+year = {2007}
+}
+@misc{Conway2009,
+abstract = {This film is about stormwater management and retention, covering topics such as rain barrels and permeable pavement. It was a finalist at the 2009 Greenlight Earth Day Film Festival.},
+author = {Conway, Matthew Wigginton},
+publisher = {Film presented at the Greenlight Earth Day Film Festival, Palo Alto, CA},
+title = {{Rain Check}},
+url = {http://www.indicatrix.org/greenlight#raincheck},
+year = {2009}
+}
+@misc{Conway201204,
+abstract = {Measures of urban mobility and accessibility are useful in many situations, from real estate to urban planning. Some methods of measuring and visualizing mobility and accessibility include making travel-time isochrones, measuring travel time effects of network changes, measuring accessibility using opportunity data, and creating time-space prisms. Transit, walking and cycling are more important to mobility than driving in many urban areas. This poster examines how the open-source OpenTripPlanner Analyst software can be used in conjunction with open transit agency and street network data to create visualizations of multimodal mobility, accessibility and changes in travel time.},
+author = {Conway, Matthew Wigginton},
+publisher = {Poster presented at the annual meeting of the California Geographical Society, Davis, California, April 27–29},
+title = {{Measuring Urban Mobility and Accessibility Using OpenTripPlanner Analyst}},
+url = {http://www.indicatrix.org/cgs2012/},
+year = {2012}
 }
